--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>blog</title>
+        <title>DrDreo Blog</title>
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff" />
         <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000" />
-        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="icon" href="/favicon.svg">
+
         <link rel="stylesheet" href="/src/styles.css" />
     </head>
     <body class="bg-white pl-[calc(100vw-100%)] text-black antialiased dark:bg-gray-950 dark:text-white scroll-smooth">
