fix markdown styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000" />
         <link rel="icon" href="/favicon.svg">
 
-        <link rel="stylesheet" href="/src/styles.css" />
+        <link rel="stylesheet" href="/src/styles/styles.css" />
     </head>
     <body class="bg-white pl-[calc(100vw-100%)] text-black antialiased dark:bg-gray-950 dark:text-white scroll-smooth">
         <app-root></app-root>
