--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <meta name="description" content="Author: Dr.Dreo,
+    Blog mostly about software and sometimes other philosophical topics.">
+        <meta name="keywords" content="blog, web development, tutorials, coding, technology, articles">
+        <meta name="author" content="DrDreo">
+        <meta property="og:title" content="DrDreo's Blog">
+        <meta property="og:description" content="Blog mostly about software and sometimes other philosophical topics.">
+        <meta property="og:image" content="logo.png">
+        <meta name="robots" content="index, follow">
+
         <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff" />
         <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000" />
         <link rel="icon" href="/favicon.svg">
